--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,19 +9,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Go 1.16
-        uses: actions/setup-go@v1
+      - name: Set up Go
+        uses: actions/setup-go@v3
         with:
-          go-version: 1.16
+          go-version: '1.20'
         id: go
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+        uses: docker/setup-buildx-action@v2
         with:
           version: latest
 
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
 
       - name: Build
         run: make build
