--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,5 +28,5 @@ jobs:
 
       - name: Build the Docker image and push
         run: |
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          echo ${{ secrets.secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           make docker-buildx-push
