chore(build): anable dependabot for actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,3 +8,9 @@ updates:
   open-pull-requests-limit: 10
   assignees:
   - 0xERR0R
+- package-ecosystem: github-actions
+  directory: "/"
+  schedule:
+    interval: daily
+  assignees:
+  - 0xERR0R
