--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,11 +4,15 @@ on:
   push:
 
 jobs:
-  build:
 
+  build:
+    name: Build
     runs-on: ubuntu-latest
+    env:
+      SHOULD_PUSH: ${{ github.repository_owner == '0xERR0R' && github.ref == 'refs/heads/master' }}
 
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -18,22 +22,37 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-        id: go
+
+      - name: Build
+        run: make build
 
       - name: Set up Docker Buildx
-        id: buildx
+        if: env.SHOULD_PUSH == 'true'
         uses: docker/setup-buildx-action@v3
         with:
           version: latest
 
-      - name: Build
-        run: make build
-        
+      - name: Get next version
+        id: version
+        if: env.SHOULD_PUSH == 'true'
+        uses: reecetech/version-increment@2023.10.2
+        with:
+          scheme: semver
+          increment: patch
+
+      - name: Set Version
+        if: env.SHOULD_PUSH == 'true'
+        run: |
+          git tag ${{ steps.version.outputs.v-version }}
+          git push origin ${{ steps.version.outputs.v-version }}
+
       - name: Login to DockerHub
+        if: env.SHOULD_PUSH == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build the Docker image and push
-        run: make docker-buildx-push
+        if: env.SHOULD_PUSH == 'true'
+        run: make docker-buildx-push DOCKER_TAG=${{ steps.version.outputs.version }}
